@@ -20,7 +20,8 @@ SUBROUTINES
 
 ERRORS
      check_language():
-             Language code '%s' isn't ISO 639-1 code.
+             Parameter '%s' doesn't contain valid ISO 639-1 code.
+                     Value: %s
 
 EXAMPLE1
      use strict;
