@@ -1,4 +1,5 @@
 0.04
+ - Rewrite error message to version like Mo::utils.
 
 0.03 2024-02-29T16:38:22+01:00
  - Add 1.33 version to load of List::Util.
